# protein-language-model

./: .gitignore  main.py  pyproject.toml  train.py
config/: config.yaml
data/: get_data.py
src/: constants.py  multihead_attention.py  rotary_embedding.py  submodules.py  tokenizer.py
src/lightning_modules/: data_module.py  lit_esm.py
src/model/: esm2.py
src/models/: multihead_attention.py
src/myplm/: esm2.py  multihead_attention.py  submodules.py  tokenizer.py
src/myplm/lightning_modules/: data_module.py  lit_esm.py
tests/: test_multiheadattn.py  test_rotary.py  test_tokenizer.py
